--- a/CSS/9.盒模型.md
+++ b/CSS/9.盒模型.md
@@ -199,3 +199,16 @@ stretch（默认值）：如果项目未设置高度或设为auto，将占满整
 
     polygon(x1 y1, x2 y2, x3 y3);
 来选择位置进行切割，x、y的值可以使用%或px，起始(0,0)点位于左下角。
+
+###宽高比
+1.`aspect-ratio`
+aspect-ratio的语法格式如下：`aspect-ratio: width/height`
+将width或height设为auto，然后指定aspect-ratio。另一个值就会按照比例自动变化。
+
+1.`padding-top/padding-bottom`
+```
+width: 100%;
+height: 0;
+padding-top: 50%;
+```
+这种方式兼容性好，但是元素内的子元素需要absolute定位。
