--- a/Vue/10.表单绑定.md
+++ b/Vue/10.表单绑定.md
@@ -2,6 +2,15 @@
 ===================
 可以用 v-model 指令在表单 input、textarea 及 select 元素上创建**双向数据绑定**（m→v，v→m）。它负责监听用户的输入事件以更新数据，根据控件类型自动选取正确的方法来更新元素。
 
+v-model 本质上是语法糖：
+
+1.text 和 textarea 元素：使用 :value 和 @input 事件；
+```
+<input :value="text" @input="text = $event.target.value">
+```
+2.checkbox 和 radio 元素：使用 :checked 和 @change 事件；
+3.select 元素：使用 :value 作为 prop  和 @change 事件。
+
 ###文本框
  input 和 textarea 元素中使用 v-model 实现双向数据绑定：
 
@@ -17,6 +26,7 @@
     }
 
 ###选择框
+一组选择框使用相同v-model，不再需要name属性。
 
 **单选框**
 `v-model`将 `value` 的值绑定至data内:
