--- a/Vue/4.监听属性和计算属性.md
+++ b/Vue/4.监听属性和计算属性.md
@@ -16,8 +16,8 @@
     },
     watch:{
         //要监视的数据
-        msg:function(value){
-            this.inputmsg=value
+        msg:function(newValue,oldValue){
+            this.inputmsg=newValue
             }
         }
     });
@@ -48,8 +48,16 @@ data() {
       }
     }
 ```
-
-
+如果需要监视的数据是对象：
+```
+watch: {
+  demo: {
+    // 该回调会在任何被侦听的对象的 property 改变时被调用，不论其被嵌套多深
+    handler: function (val, oldVal) { /* ... */ },
+    deep: true
+  },
+}
+```
 ###计算属性
 计算属性用于对数据进行逻辑处理。将计算属性写在 **`computed`**内：
 
@@ -62,36 +70,19 @@ data() {
       },
       computed: {
         // 计算属性的 getter
-        reversedMessage: function () {
+        reversedMessage: function (可传参) {
           // this 指向 vm 实例
           return this.message.split('').reverse().join('')
         }
       }
     })
 
-注意：虽然计算属性是函数，但是是像属性一样来使用，不用小括号。
+计算属性是对data数据的计算，两者使用方法也是一样的。
+计算属性是依赖计算的数据来更新的，只有计算的数据改变了，才会引起计算属性的更新，计算的数据不改变，则返回缓存值。
     
 **计算属性vs方法**
-
-使用方法也能达到达到同样的效果：
-
-    methods: {
-      reversedMessage: function () {
-        return this.message.split('').reverse().join('')
-      }
-    }
-区别在于：
-计算属性只基于**响应式依赖**， `this.message` 不改变，则不会再次执行函数，而是直接返回缓存结果。
-```
-computed: {
-  now: function () {
-    return Date.now()
-  }
-}
-```
-计算属性now也不再更新,因为Date.now()这个依赖不是响应式的。
-
-方法在调用时，总会重新调用执行函数。
+计算属性是只有当`this.message`改变时，才会重新调用函数运行，使用计算属性时，返回这个缓存结果。
+而方法每次使用时，都会重新调用函数运行，返回结果。
 
     <div id="app">
       <p>计算属性: {{ computedmsg }}</p>  //1a
@@ -123,7 +114,7 @@ computed: {
 所以，有需要重复调用的复杂算法，使用计算属性更高效。
 
 **计算属性vsWatch**
-Watch监视数据变化时，只能监视单个数据，并且涉及到对象类型的数据时，还需要通过计算属性转化。所以，直接使用计算属性更合适。
+Watch监视数据变化时，只能监视单个数据。
 ```
 data: {
     firstName: 'Foo',
@@ -134,6 +125,7 @@ data: {
 ```
 //watch
 watch: {
+    // 只能分开监视firstName和lastName，无法同时监视两个数据
     firstName: function (val) {
       this.fullName = val + ' ' + this.lastName
     },
@@ -151,6 +143,8 @@ computed: {
   }
 
 ```
+计算属性适用于当数据变化后，引起新的数据更新。watch适用于数据变化后，做出一些行为。
+
 **set与get**
 计算属性默认只有 getter ，不过在需要时你也可以提供一个 setter ：
 ```
