--- a/JS/9.调用函数.md
+++ b/JS/9.调用函数.md
@@ -46,11 +46,12 @@
 一个函数有直接或间接调用自身的行为，就称为递归。
 
 	function foo(i) {
-		if (i < 0);
-		return false;
+		if (i < 0){
+			return false
+		}
 		console.log(i);
 		foo(i - 1);
 	}
 	foo(3); //3 2 1 0
 
-每次函数调用，都会被压入堆栈内，占据一块内存，执行完毕后函数才能从堆栈里面移除。而递归函数在最后一次调用的函数执行完之前，所有的函数都没有执行完毕。所以，递归次数过多时，会导致堆栈溢出。
+函数每次调用，都会压入栈内一次，占据一块内存。在最后一次调用的函数执行完之前，所有的函数都没有执行完毕，都压在栈内。所以，递归次数过多时，会导致栈溢出。
