--- a/Vue/9.事件绑定.md
+++ b/Vue/9.事件绑定.md
@@ -57,9 +57,9 @@
             }
         },
     })    
-如果既需要传递参数，又需要event对象，则需要传递`$event`实参，这样在函数内就能获取event对象。
+如果既需要传递参数，又需要event对象，则需要**传递`$event`实参**，这样在函数内就能获取event对象。
 ``
-<button type="button" @click=btn3Click(msg,$event)>event</button>
+<button type="button" @click="btn3Click('msg',$event)">event</button>
 ``
 ###事件修饰符
 使用事件修饰符可以表示在事件处理程序中调用了 event.preventDefault() 或 event.stopPropagation() 等方法，在事件后加点(.)指令调用修饰符。多个修饰符可以串联在一起。
@@ -92,3 +92,6 @@
 或者将key换为keyCode也可以：
 
     <input v-on:keyup.13="submit">
+
+###鼠标修饰符
+`.left` `.right` `.middle`修饰符会限制处理函数仅响应特定的鼠标按钮。
