--- a/JS/10.对象.md
+++ b/JS/10.对象.md
@@ -127,4 +127,14 @@ Object.getOwnPropertyDescriptor(obj, 'foo')
 // }
 ```
 属性描述对象存值函数称为setter，使用属性描述对象的set属性；取值函数称为getter，使用属性描述对象的get属性。
+```
+Object.defineProperty(obj, 'foo', {
+    set(newValue){
+
+    },
+    get(){
+
+    }
+});
+```
 注意：如果设置value属性或将writable属性设为true，就不能定义取值函数或存值函数。
