--- a/Vue2/11.组件（一）.md
+++ b/Vue2/11.组件（一）.md
@@ -75,7 +75,7 @@ Vue.component('my-component', {
 ```
 **$attrs**
 
-根元素内的其他元素可能需要组件的attr，给这个元素添加 v-bind="$attrs" 就能获取组建的所有非prop的attr。
+根元素内的其他元素也可以获取组件的attr，给这个元素添加 v-bind="$attrs" 就能获取组件的所有非prop的attr。
 ```
 <template id="myComp">
     <div>
@@ -86,15 +86,22 @@ Vue.component('my-component', {
 <my-comp type="text"></my-comp> //<input type="text">
 <my-comp type="password"></my-comp> //<input type="password">
 ```
-这个规则也适用于事件监听器，所以，推荐将事件绑定在组件实例中，不写在组件模版内。
+**$listeners**
+
+`$listeners`存放组件的事件监听器，使用`v-on="$listeners"`能将事件监听器指向组件的某个子元素：
+```
+<my-comp @mousedown="mousedown" @mouseup="mouseup"></my-comp>
+
+<template id="my">
+  <button v-on="$listeners">123</button>  // $listeners: {mousedown: ƒ, mouseup: ƒ}
+</template>
+
+```
+根元素button的mousedown和mouseup能触发组件的mousedown和mouseup。
 
 ###  组件的v-model
 
-```
-<my-input v-model="text"></my-input>
-```
-以 input[type="text"] 为例，组件 v-model 实际
-为 :value 和 @input :
+组件的 v-model 使用 :value 和 @input :
 ```
 <my-input :value="text" @input="input"></my-input>
 ```
@@ -107,8 +114,19 @@ Vue.component('my-input', {
   `
 })
 ```
+value对于text和radio作用是不同的，text可以直接使用，raido则需要将value和自身的value值对比来确定checked。所以对于radio，checkbox等，可以添加model，指定v-model的value值放在一个prop内和触发的事件：
+```
+<!-- 模版 -->
+model: {
+  prop: 'parevalue',
+  event: 'change'
+},
+props: ['value','parevalue'],
 
-v-model这个语法糖在input、radio等有不同的实现，在组件上就默认使用value和input。则对于模版有radio这种的，就不太合适，需要model 选项来更改默认内容。
+<!-- 组件 -->
+<my-radio v-for="num in arrNum" :key="num" :value="num" v-model="selected"></my-radio>
+```
+这样组件v-model的值selected就放在parevalue这个prop内传入。
 
 ###  插槽slot
 组件元素之间的位置我称之为插槽位，内容本来是没有作用的：
@@ -210,4 +228,41 @@ data(){
 具名插槽和作用域插槽可以同时使用：
 `#name='slotData'`
 
+### 组件事件.native修饰符
+组件事件添加.native，则根元素在触发这个事件时，组件就能直接监听到，不需要&emit。
+```
+// 下面三种方式是一样的，都能触发组件的click
+<my-comp @click.native="click"></my-comp>
+<template id="myComp">
+  <button>123</button>
+</template>
 
+<my-comp @click="click"></my-comp>
+<template id="myComp">
+  <button @click="$emit('click')">123</button>
+</template>
+
+<my-comp @click="click"></my-comp>
+<template id="myComp">
+  <button v-on="$listeners">123</button>
+</template>
+```
+根元素的click就能直接被组件获取，参数event.target为根元素。如果根元素也监听了click，则先触发根元素事件，如果根元素click.stop，则组件还是监听不到click事件。
+
+但如果不是根元素，就还是需要&emit。
+
+### .sync 修饰符
+.sync实现 prop 的“双向绑定”。
+组件的值作为prop传递给子组件，子组件发送新值，通知组件变更值时，可以使用.sync 修饰符和 `update:propName` 自定义事件：
+```
+<my-comp :value.sync="组件传递的值"></my-comp>
+
+<!-- 模版 -->
+<button @click="$emit('update:value','子组件改变组件值')">{{value}}</button>
+
+props:['value']
+```
+如果有多个 prop 的时候，也可以:
+```
+<my-comp v-bind.sync="组件属性和值的键值对"></my-comp>
+```
