--- a/Vue2/12.组件（二）.md
+++ b/Vue2/12.组件（二）.md
@@ -84,12 +84,22 @@ new Vue({
 props也可以是一个对象：
 ```
 props:{
-    postdata: Array
+    postdata: {
+        type: Number,
+        default: 100
+    }
 }
 ```
-这样做的好处是可以明确传递的数据类型。
-
-prop 是从父组件到子组件单向下行绑定的，是**只读数据**，如果视图改变，就会报错。
+要注意，如果默认值是对象，则必须使用函数返回：
+```
+postdata: {
+    type: Array,
+    default(){
+        return [1,2,3]
+    }
+}
+```
+prop 是从父组件到子组件单向下行绑定的，是**只读数据**。
 
 ###  子组件传值-事件
 子组件通过`$emit("自定义事件名"[,...数据])`来传递参数：
@@ -187,16 +197,13 @@ provide() {
 //后代组件
 inject: ['fatherdata']
 ```
-provide/inject 绑定并不是响应式的。provide的变化并不会反映在 inject，也就是说传递是一次性的。
-注意：provide传递的数据如果是引用类型，改变这个数据，虽然inject值变化，但这是由于数据为引用类型导致的，不是由于响应式而产生的变化。
-
-**响应式**
-需要为 provide 的数据使用一个组合式 API`computed`，inject接收到的是一个对象，数据值储存在value内。
+provide/inject 这样绑定是一次性的，provide的变化并不会反映在 inject。
+如果 provide 传递的数据为响应式的，则inject就能响应式变化。如使用一个组合式 API`computed`。
 ```
 // 祖先组件
 provide() {
     return {
-        fatherdata: Vue.computed(()=>{this.fatherdata})
+        fatherdata: Vue.computed(()=>{return this.fatherdata})
     }
 }
 
@@ -204,11 +211,11 @@ provide() {
 inject: ['fatherdata']
 
 //后代组件的模版
-<p>{{fatherdata.value}}</p>
+<p>{{fatherdata}}</p>
 ```
-**区别**
-Provide / Inject对于数据的改变是双向的，父子组件都会改变数据，而props/$emit则是单向的，获取到的数据是只读的。
+Inject获取到的数据和prop一样是只读的（不能修改变量指向，但是可以修改变量属性值）。
 
+注意：如果传递的数据如果是引用类型，改变这个数据的属性值引起的其他组件的变化，是由于数据为引用类型导致的，不是响应式。
 
 ###  动态组件
 ```
