--- a/Vue2/14.特殊属性和自定义指令.md
+++ b/Vue2/14.特殊属性和自定义指令.md
@@ -2,6 +2,7 @@
 ===================
 ###  特殊属性
 **key**
+key 被作为 Vue 的 diff 算法的提示，以保持对节点身份的持续跟踪。
 Vue 会尽可能的复用元素，所以组件中如果有元素复用，就需要添加`key`Attr来区分。
 最常见的用例是结合 v-for、v-if。
 
@@ -61,7 +62,7 @@ this.$refs.childComp可以获取子组件的数据，调用子组件的方法。
 5.unbind：只调用一次，指令与元素解绑时调用。
 
 **钩子函数参数**
-钩子函数有四个参数，为 el、binding、vnode 和 oldVnode。
+所有钩子函数接收四个参数，为 el、binding、vnode 和 oldVnode。
 `el`：指令所绑定的DOM。
 `binding`：指令的描述对象。
 `vnode`：Vue 编译时生成的虚拟DOM。
