--- a/Vue2/18.单文件组件.md
+++ b/Vue2/18.单文件组件.md
@@ -3,7 +3,7 @@
 将组件抽取到一个.vue文件。
 
 ###  装载环境
-使用单文件组件需要配置相关环境。vue提供了脚手架工具Vue Cli来帮助配置相关环境，或者使用[HbuildX编辑器](https://ask.dcloud.net.cn/docs/#//ask.dcloud.net.cn/article/35357)(集成了相关环境)，当然，也可以使用Vue Loader自己配置。
+使用单文件组件需要配置相关环境。vue提供了脚手架工具Vue Cli来帮助配置相关环境，也可以使用Vue Loader自己配置。
 
 ###  单文件组件
 一个vue文件就是一个独立的组件。组件使用其他组件时，需要先引入和注册其他组件，同时将自己暴露出来，供别的组件使用：
