--- a/Vue2/2.Vue起步.md
+++ b/Vue2/2.Vue起步.md
@@ -24,17 +24,6 @@ Vue构造函数接受一个**配置对象**作为参数，其中：
 这个被vue实例绑定的DOM区域就是mvvm中的v（view），这个通过 new 创建的vue实例称为根实例。
 一旦实例挂载到一个 DOM 元素上，就不需要关注 DOM 了，只需要处理Vue实例即可，因为Vue实例控制着这个DOM的一切。
 
-**vue3**
-vue3使用新的全局api`createApp`
-```
-const app = Vue.createApp({})
-```
-和新的应用api`mount`
-```
-app.mount('#id')
-```
-来挂载到DOM。
-
 ###  数据响应
 
 当一个 Vue 实例内，data属性的值发生改变时，视图将会产生“响应”，即更新为新的值：
@@ -103,7 +92,7 @@ var vm = new Vue({
 ![](./相关文件/2.1.png)
 
 **nextTick**
-当处理data内数据时，是先执行，再重新渲染DOM，而nextTick能将执行延迟到本轮 DOM 更新之后，即先执行其他的，渲染DOM后，再执行nextTick的回调，再渲染。
+nextTick的回调函数，会在本轮 DOM 更新之后，再执行。
 ```
 <div class="app">
   <div ref="msgDiv">{{msg}}</div>
@@ -117,18 +106,18 @@ var vm = new Vue({
 new Vue({
   el: '.app',
   data: {
-    msg: 'oldData.',
+    msg: 'oldData',
     msg1: '',
     msg2: '',
     msg3: ''
   },
   methods: {
     changeMsg() {
-      this.msg = "newData."
+      this.msg = "newData"
       // DOM未更新
       this.msg1 = this.$refs.msgDiv.innerHTML
       this.$nextTick(() => {
-    	// DOM以更新
+    	  // 先不执行，本轮DOM更新完成后才执行
         this.msg2 = this.$refs.msgDiv.innerHTML
       })
       this.msg3 = this.$refs.msgDiv.innerHTML
