--- a/Vue2/20.前端路由（二）.md
+++ b/Vue2/20.前端路由（二）.md
@@ -48,14 +48,30 @@ routes: [
     }
 ]
 ```
-路径之间可以进行重定向，比如把入口页进行重定向：
+可以使用redirect进行重定向，比如把入口页进行重定向：
 ```
 {
   path: '/',
   redirect:'/home'
 },
+{
+  path: '/home',
+  component: Home
+},
 ```
-这样，首次进入页面时，路径'/'会改为'/home'，进入/home页。
+这样，首次进入页面时，路径'/'会重定向到'/home'，进入/home页。
+
+**动态路由**
+地址如果是动态的，就需要在路由的路径加上`:变量`：
+```
+{
+  path: '/user/:userName', //路径可以使用多次变量
+  component: User
+}
+
+<router-link to="/user/wxc">Go to User</router-link>
+```
+这样，就能正确路由到user组件，变量userName可以获取到字符串'wxc'，这些对应关系储存在this.$route.params内。
 
 ###  挂载router实例
 
@@ -73,6 +89,7 @@ routes: [
 <!-- 路由匹配到的组件将渲染在这里 -->
 <router-view></router-view>
 ```
+**tag**
 router-link默认会被渲染成一个a标签,可以添加tag属性改为其他标签：
 
 ```
@@ -83,24 +100,54 @@ vue能检测到处于激活（active）状态的router-link，给它添加class`
 **路由命名**
 创建路由实例时，还可以给路由实例添加`name:string`属性来命名路由，这样，直接指向这个名字就能访问该路由，例如router-link的to属性：
 ```
-<router-link to="{name:string}">Go to About</router-link>
+{
+  path: '/home',
+  component: Home,
+  name: 'home'
+},
+
+
+<router-link to="{name:'home'}">Go to About</router-link>
 ```
-例如路由重定向：
+或者路由重定向：
 ```
-routes: [{ path: '/', redirect: { name: string }}]
+{ 
+  path: '/', 
+  redirect: { name: 'home' }
+}
 ```
-**router对象**
-使用`this.$router`API可以访问到App全局路由对象，使用`this.$route`API可以访问到App全局路由内处于激活（active）状态的对象。
-组件内的 `this.route`API可以访问到该组件的路由对象。
+
+**路由传参**
+路由可以借助动态路由`:变量`的方式可以进行传参，在组件内`$route.params`可以获取传递的参数。
+
+还可以使用query传参：
+```
+<router-link to="{
+  path: '/',
+  query: {}
+  }">Go to Home</router-link>
+```
+在组件内`$route.query`可以获取传递的参数。
+
+**`$router`**
+组件内使用`this.$router`API可以访问全局路由对象。
+使用`this.$route`API可以访问当前激活的路由对象。
+
 
 **keep-alive组件**
 keep-live是Vue的内置组件，能够保存所包含组件的缓存状态，避免重新渲染。
 使用keep-live包裹router-view可以将页面的状态保存下来，再次进入时不主动进行刷新。
-在keep-live内渲染的页面组件会增加两个回调函数：
+在keep-live内渲染的页面组件会增加两个生命周期回调函数：
 ```
 activated() //页面组件活跃时回调
 deactivates()  //页面组件失去活跃时回调
 ```
-两个属性：
+keep-alive组件具有两个属性，可以控制包裹的组件是否不缓存：
 `include:String/regexp` 只有匹配的组件被缓存
 `exclude:String/regexp` 只有匹配的组件不被缓存
+```
+<keep-live exclude='compa,compb'>
+ <router-view></router-view>
+</keep-live>
+```
+这样路由跳转时，就不再缓存compa和compb组件，而是重建和销毁。
