--- a/Vue2/4.监听属性和计算属性.md
+++ b/Vue2/4.监听属性和计算属性.md
@@ -27,6 +27,7 @@
 	    //...
 	})
 
+watch监听的是变量的指向，对于值本身不关注，比如改变值的某个属性，不会调用watch。
 如果需要监视的数据是对象的属性值，就需要借助于computed计算属性来返回该值再监视。
 ```
 data() {
@@ -48,16 +49,19 @@ data() {
       }
     }
 ```
-如果需要监视的数据是对象：
+或者选择深度监听：
 ```
 watch: {
   demo: {
     // 该回调会在任何被侦听的对象的 property 改变时被调用，不论其被嵌套多深
-    handler: function (val, oldVal) { /* ... */ },
+    handler: function (newVal, oldVal) {
+      // newVal, oldVal是相同的，都指向this.demo的proxy对象。
+    },
     deep: true
   },
 }
 ```
+
 ###  计算属性
 计算属性用于对数据进行逻辑处理。将计算属性写在 **`computed`**内：
 
