--- a/Vue2/9.事件绑定.md
+++ b/Vue2/9.事件绑定.md
@@ -60,9 +60,13 @@
 如果既需要传递参数，又需要event对象，则需要**传递`$event`实参**，这样在函数内就能获取event对象。
 
 ``
-<button type="button" @click="btn3Click('msg',$event)">event</button>
+<button type="button" @click="btn3Click($event,'msg')">event</button>
 ``
 
+v-on也支持事件和事件函数的键值对：
+```
+<div v-on="{mousedown:mousedownEvent,mouseup:mouseupEvent}"></div>
+```
 ###  事件修饰符
 使用事件修饰符可以表示在事件处理程序中调用了 event.preventDefault() 或 event.stopPropagation() 等方法，在事件后加点(.)指令调用修饰符。多个修饰符可以串联在一起。
 
