--- a/JS/18.JS事件.md
+++ b/JS/18.JS事件.md
@@ -251,7 +251,7 @@ btn.addEventListener('click',()=>{
 ###  防抖
 防抖是在事件触发时，有延迟时间再执行，在等待过程中，如果事件又触发了，则重置等待时间。
 ```
-let timer = undefined;  //节流定时器
+let timer = undefined;  //防抖定时器
 btn.addEventListener('click',(e)=>{
 	if ( timer ){
 		clearTimeout(timer);
