--- a/Vue2/11.组件（一）.md
+++ b/Vue2/11.组件（一）.md
@@ -64,6 +64,13 @@ new Vue({
 ```
 同样，template标签内，**只能有一个根元素**。
 
+### 异步组件
+单页面组件内：
+```
+components: {
+  'my-component': () => import('./my-async-component')
+}
+```
 ###  组件非prop的 Attribute
 组件的attr属性除了prop（接收父元素数据）以外，其他的默认都会传递到组件的根元素上。这其中，class和style会和根元素的attr叠加，其他的会进行覆盖。
 要禁止组件的根元素继承 attribute，可以在组件的选项中设置 inheritAttrs: false。
@@ -191,20 +198,9 @@ slot具有name属性，只有name相同的插槽位才能对应替换slot：
 ```
 一个不带 name 的slot带有隐含的名字“default”。
 
-**vue2.6+及vue3中则使用v-slot:name代替slot='name'**：
-```
-<my-panel>
-  <template v-slot:first>
-    <p>111</p>
-  </template>
-  <template v-slot:second>
-    <p>222</p>
-  </template>  
-</my-panel>  
-```
-**v-slot只能写在template上**，所以插槽位元素都需要放置于template标签内。
+**vue2.6+及vue3中则使用v-slot:name代替slot='name'**，`v-slot:name`可以缩写为`#name`。
 
-`v-slot:name`可以缩写为`#name`。
+**v-slot只能写在template上**，所以插槽位元素都需要放置于template标签内。
 
 ###  作用域插槽
 有时要用插槽位来展示组件的数据，就需要组件在slot标签内使用属性绑定数据data,再在实例中，插槽位使用`slot-scope="data"`来获取数据。vue2.6+及vue3使用`v-slot`代替`slot-scope`
