--- a/Vue2/12.组件（二）.md
+++ b/Vue2/12.组件（二）.md
@@ -181,7 +181,8 @@ let parentOptions = {
 **`vm.$parent`和`vm.$root`** 
 `vm.$parent`会获取组件的父组件，`vm.$root`会获取组件的根组件（vm）。
 
-API访问虽然简洁，但是代码所表述的组件的层级关系，锁死了组件的位置，后期产生层级位置变动后，很难以维护。
+API访问虽然简洁，但是锁死了组件的位置，组件之间耦合程度高。并且不同于prop的只读，父子组件可以互相修改对方的数据，破坏了单项数据流。
+
 
 ###  Provide / Inject
 对于多层嵌套，祖先组件有一个 provide 选项来提供数据/方法，后代组件有一个 inject 选项来接收。
