--- a/Vue2/2.Vue起步.md
+++ b/Vue2/2.Vue起步.md
@@ -63,28 +63,24 @@ var vm = new Vue({
 		console.log('created');
 	},
     
-	//在挂载开始之前被调用：相关的渲染函数首次被调用
+	//在挂载开始之前被调用：相关的渲染函数首次被调用，没有$el
 	beforeMount : function(){
 		console.log('beforeMount');
-
 	},
     
 	//挂载完成，vue实例替换了绑定的dom内的元素，有了$el
 	mounted : function(){
 		console.log('mounted');
-	
 	},
     
 	//数据更新之前调用
 	beforeUpdate : function(){
 		console.log('beforeUpdate');
-			
 	},
     
 	//组件 DOM 已经更新, 组件更新完毕 
 	updated : function(){
 		console.log('updated');
-			
 	}
 });
 ```
