--- a/Vue3/2.指令.md
+++ b/Vue3/2.指令.md
@@ -145,3 +145,35 @@ methods:{
 ### 生命周期
 ![](./相关文件/2.1.png)
 composition API中没有beforeCreate和created，在这两个回调中执行的代码，应该直接写在setup内。
+
+### 自定义指令
+全局自定义指令使用directive()来注册：
+```
+app.directive('throttle', throttleOptions);
+```
+throttleOptions是指令的配置对象，里面是一些控制指令生效的生命周期函数，一般常用mounted()，表示挂载后生效。
+```
+<button v-throttle.click="3000">防抖按钮</button>
+
+{
+    mounted(el, binding) {
+        let time = binding.value || 2000;
+        let modifiers = binding.modifiers;
+        let timeout = null;
+        for ( let eventName in modifiers ){
+            el.addEventListener(eventName,()=>{
+                if ( timeout ){
+                    clearTimeout(timeout)
+                }else{
+                    el.setAttribute('disabled',true)
+                    timeout = setTimeout(() => {
+                        el.removeAttribute('disabled');
+                        timeout = null
+                    }, time);
+                }
+            })
+        }
+    }
+}
+```
+el是指令所在的元素，binding为指令的数据，value储存指令的值，arg储存指令的参数,modifiers储存指令的修饰符。
