--- a/Vue3/4.Composition（二）.md
+++ b/Vue3/4.Composition（二）.md
@@ -2,8 +2,8 @@
 ---
 ### 计算属性
 ```
-computed(()=>{})
-computed({
+let value = computed(()=>{})
+let value = computed({
     get(){},
     set(newValue){}
 })
