--- a/Vue2/12.组件（二）.md
+++ b/Vue2/12.组件（二）.md
@@ -90,7 +90,7 @@ props:{
     }
 }
 ```
-要注意，如果默认值是对象，则必须使用函数返回：
+要注意，**如果默认值是对象，则必须使用函数返回**：
 ```
 postdata: {
     type: Array,
@@ -99,6 +99,7 @@ postdata: {
     }
 }
 ```
+如果prop是Boolean类型，不传值时，默认传递true，组件没有该属性，默认传递false。
 prop 是从父组件到子组件单向下行绑定的，是**只读数据**。
 
 ###  子组件传值-事件
@@ -199,7 +200,7 @@ provide() {
 inject: ['fatherdata']
 ```
 provide/inject 这样绑定是一次性的，provide的变化并不会反映在 inject。
-如果 provide 传递的数据为响应式的，则inject就能响应式变化。如使用一个组合式 API`computed`。
+如果 provide 传递的数据为响应式的，则inject就能响应式变化。
 ```
 // 祖先组件
 provide() {
@@ -214,6 +215,16 @@ inject: ['fatherdata']
 //后代组件的模版
 <p>{{fatherdata}}</p>
 ```
+或者直接传递一个函数：
+```
+provide() {
+    return {
+        fatherdata:()=>{return this.fatherdata}
+    }
+}
+```
+后代组件中调用函数。
+
 Inject获取到的数据和prop一样是只读的（不能修改变量指向，但是可以修改变量属性值）。
 
 注意：如果传递的数据如果是引用类型，改变这个数据的属性值引起的其他组件的变化，是由于数据为引用类型导致的，不是响应式。
