--- a/Vue2/2.Vue起步.md
+++ b/Vue2/2.Vue起步.md
@@ -41,7 +41,7 @@ data1的a值改变时，html视图会进行重渲染。这是由于 data1 对象
     vm.b = 2
 对 b 的改动将不会触发任何视图的更新。
 所以，如果需要添加一个新属性并能响应，最好是提前添加这个属性，并给一个默认值。或者，通过`$set`来添加新属性。
-这种数据绑定是由vue实例指向视图层，是**单向绑定**，只能由vue实例来更新视图。
+这种数据绑定是由vue实例指向视图层，是**单向绑定**，只能从vue实例来更新视图。
 
 ###  生命周期
 Vue实例从被创建到被销毁，这一完整的过程称为生命周期。在这个过程中会，一些叫做生命周期钩子的回调函数被依次触发，生命周期函数可以用来控制不同阶段时要做的事。
@@ -58,12 +58,13 @@ var vm = new Vue({
 		console.log('beforeCreate');
 	},
     
-	//实例创建之后。在这一步，实例已完成以下的配置：数据观测 (data observer)，属性和方法的运算，watch/event 事件回调。然而，还没开始将实例挂载到dom，没有$el
+	//实例创建之后。在这一步，实例已完成：数据观测 (data observer)，属性和方法的运算，watch/event 事件回调。
+	//然而，还未将实例挂载到dom，没有$el
 	created	:function(){
 		console.log('created');
 	},
     
-	//在挂载开始之前被调用：相关的渲染函数首次被调用，没有$el
+	//在挂载开始之前被调用：解析模版，还未挂载，没有$el
 	beforeMount : function(){
 		console.log('beforeMount');
 	},
