--- a/Vue2/21.前端路由（三）.md
+++ b/Vue2/21.前端路由（三）.md
@@ -148,7 +148,7 @@ beforeRouteEnter (to, from, next) {
 11.触发 DOM 更新。
 12.调用 beforeRouteEnter 守卫中传给 next 的回调函数，创建好的组件实例会作为回调函数的参数传入。
 
-###路由元信息
+### 路由元信息
 给页面的路由对象添加meta对象，可以给该页面的路由对象添加自定义数据：
 ```
 {
@@ -161,3 +161,13 @@ beforeRouteEnter (to, from, next) {
 }
 ```
 这个数据保存在$route的meta属性内。
+
+### 编程式导航
+```
+this.$router.push(options, onComplete?, onAbort?)
+```
+当点击 `<router-link>` 时，也是在内部调用的这个方法。
+```
+this.$router.push({ name: 'home', path: 'home' }) // 和二级路由一样，路径不要写/
+```
+此时，路由会跳转到routes内设置的/home路径。还可以传入params或query传递参数，但是使用params时，不能使用path，必须使用name。
