--- a/Vue2/23.Vuex（二）.md
+++ b/Vue2/23.Vuex（二）.md
@@ -2,7 +2,7 @@
 ===================
 store对象有以下几个核心内容：
 **state**、**getters**、**mutations**、**actions**、**modules**
-![](./相关文件/24.png)
+
 ###  state
 state作为唯一数据源而存在，响应式的存储状态。
 在 Vue 组件中可以读取状态：
@@ -19,6 +19,26 @@ computed: {
   }
 }
 ```
+
+**mapState 辅助函数**
+当一个组件需要获取多个状态的时候，可以使用 mapState 辅助函数生成计算属性:
+```
+import { mapState } from 'vuex'
+
+computed: {
+  // 数组写法
+  ...mapState([
+    // 映射 this.count 为 store.state.count
+    'count'
+    // 实际执行count: (state) => { return state.count }
+  ])
+  // 对象写法
+  ...mapState({
+    vuexCount: 'count'
+  })
+}
+```
+
 ###  getters
 Vuex 中的 getters 类似于计算属性，返回值会根据它的依赖被缓存起来，且只有当它的依赖值发生了改变才会被重新计算。组件中访问getters的方法类似于state，getters的函数同样默认接受 state 作为第一个参数，还可以接受getters自身作为第二个参数。getters只接受这两个参数。
 ```
@@ -47,6 +67,22 @@ computed: {
   }
 ```
 
+**mapGetters 辅助函数**
+```
+import { mapGetters } from 'vuex'
+
+computed: {
+  // 数组写法
+  ...mapGetters([
+    'squrt',
+  ])
+  // 对象写法
+  ...mapGetters([
+    vuexSqurt: 'squrt',
+  ])
+}
+```
+
 ###  mutations
 Vuex 中的 mutations 类似于方法，内部注册的函数就是实际进行状态更改的地方，函数默认接受 state 作为第一个参数以及额外的参数：
 ```
@@ -63,17 +99,41 @@ this.$store.commit('increment', 5)
 ```
 **Mutation 内需要是同步函数。**
 
+**mapMutations 辅助函数**
+```
+import { mapMutations } from 'vuex'
+
+methods: {
+  // 数组写法
+  ...mapMutations([
+    'increment', // 将 `this.increment(5)` 映射为 `this.$store.commit('increment', 5)`
+  ]),
+  // 对象写法
+  ...mapMutations({
+    vuexIncrement: 'increment'
+  })
+}
+```
 ###  actions
 actions用于放置异步方法，并且是通过异步提交mutations内注册的函数进行异步操作，而不是直接变更状态。actions内的函数第一个参数是 context 对象，这个对象是store（vuex）的深拷贝。
 
 ```
 actions: {
-    asyncIncrement(content,obj){
-        setTimeout(()=>{
-          content.commit('increment',obj.num);
-          obj.log()
-        },obj.time)
-    }
+  asyncIncrement(content,obj){
+      setTimeout(()=>{
+        content.commit('increment',obj.num);
+        obj.log()
+      },obj.time)
+  }
+}
+```
+使用解构赋值简化代码：
+```
+asyncIncrement({commit},obj){
+    setTimeout(()=>{
+      commit('increment',obj.num);
+      obj.log()
+    },obj.time)
 }
 ```
 组件内：
@@ -86,6 +146,23 @@ this.$store.dispatch('asyncIncrement',{
   }
 })
 ```
+**mapActions 辅助函数**
+```
+import { mapActions } from 'vuex'
+
+methods: {
+  // 数组写法
+  ...mapActions([
+    'asyncIncrement', // 将 `this.asyncIncrement(obj)` 映射为 `this.$store.dispatch('asyncIncrement', obj)`
+  ]),
+  // 对象写法
+  ...mapActions({
+    vuexAsyncIncrement: 'asyncIncrement'
+  })
+}
+```
+
+![](./相关文件/24.png)
 
 ###  modules
 应用的所有状态会集中到一个比较大的对象。当应用变得非常复杂时，store 对象就有可能变得相当臃肿。为了解决以上问题，Vuex 允许我们将 store 分割成模块（module）。
