--- a/Vue2/24.响应式原理.md
+++ b/Vue2/24.响应式原理.md
@@ -20,7 +20,7 @@ vue响应式的原理，就是解决了两个问题：
 对此，vue分别采用数据劫持和发布订阅模式的方式来实现。
 
 **数据劫持**
-观察者Observer（vue2通过Object.defineProperty()重置对象的setter, getter，vue3则是proxy代理对象）对data内每个属性建立一个该属性的发布者Dep。
+观察者Observer（vue2通过Object.defineProperty()深度重置对象每个属性的setter, getter，vue3则是proxy整体代理对象）对data内每个属性建立一个该属性的发布者Dep。
 
 **发布订阅模式**
 Compile对模版每个节点元素进行扫描和解析，每个属性的引用都建立订阅者watcher，将订阅者push到对应的Dep。数据的发现数据变化后，就发送消息到消息订阅器Dep，Dep再分发消息到订阅者，从而更新视图。
