--- a/Vue2/4.监听属性和计算属性.md
+++ b/Vue2/4.监听属性和计算属性.md
@@ -27,8 +27,7 @@
 	    //...
 	})
 
-watch监听的是变量的指向，对于值本身不关注，比如改变值的某个属性，不会调用watch。
-如果需要监视的数据是对象的属性值，就需要借助于computed计算属性来返回该值再监视。
+默认情况下，watch一个对象，改变某个属性，不会调用watch。此时就需要借助于computed计算属性来返回该属性值，再监视。watch一个数组，除了index方式改变以外，都能监听到。
 ```
 data() {
       return {
@@ -55,7 +54,7 @@ watch: {
   demo: {
     // 该回调会在任何被侦听的对象的 property 改变时被调用，不论其被嵌套多深
     handler: function (newVal, oldVal) {
-      // newVal, oldVal是相同的，都指向this.demo的proxy对象。
+      // newVal, oldVal是相同的，都指向this.demo的Observer对象。
     },
     deep: true
   },
@@ -84,7 +83,7 @@ watch: {
 计算属性是对data数据的计算，两者使用方法也是一样的。
 计算属性是依赖计算的数据来更新的，只有计算的数据改变了，才会引起计算属性的更新，计算的数据不改变，则返回缓存值。
 
-**set与get**
+**计算属性的set与get**
 计算属性具有 getter 和 setter ：
 ```
 <div id = "app">
@@ -116,7 +115,7 @@ computed:{
 });
 ```
 改变firstname或lastname时，getter会被调动，fullname会相应的更新。再改变fullname，setter 会被调用，firstname 和lastname 也会相应地被更新。
-    
+
 **计算属性vs方法**
 计算属性是只有当`this.message`改变时，才会重新调用函数运行，使用计算属性时，返回这个缓存结果。
 而方法每次使用时，都会重新调用函数运行，返回结果。
@@ -152,6 +151,7 @@ computed:{
 
 **计算属性vsWatch**
 Watch监视数据变化时，只能监视单个数据。
+计算属性有返回值，不能执行异步，watch可以。
 ```
 data: {
     firstName: 'Foo',
