--- a/Vue2/8.列表渲染.md
+++ b/Vue2/8.列表渲染.md
@@ -25,7 +25,7 @@ v-for 还支持当前项的索引做为可选参数：
     </ul>
 
 **数组的非响应式方法**
-数组通过数组方法改变自身，会响应式的引起页面的刷新，但是通过数组index改变数组,只会改变数组，而不会响应式的更新页面：
+数组通过响应式方法改变自身，会响应式的引起页面的刷新，但是通过数组index改变数组,只会改变数组，而不会响应式的更新页面：
 
 ```
 this.arr[0] = 1 
@@ -33,7 +33,9 @@ this.arr[0] = 1
 因为这种更改方式，不是响应式的方法。
 
 响应式方法包括：
-push()、pop()、shift()、unshift()、splice()、sort()、reverse()、filter()、concat() 和 slice()
+```
+push(), pop(), shift(), unshift(), splice(),sort(), reverse()
+```
 
 非响应式方法包括：
 1.利用索引直接设置一个数组项
