--- a/Vue3/3.Composition（一）.md
+++ b/Vue3/3.Composition（一）.md
@@ -5,34 +5,36 @@ setup() 函数是专门用于组合式api的钩子函数，不使用单文件组
 setup在组件create之前执行。只能接受到接收props数据和组件上下文对象（可选）。
 **注意：在setup()函数中无法访问this。**
 
-事实上，组合式api最好使用单文件组件，vue建立了`<script setup>`来简化。
+事实上，组合式api最好使用单文件组件，通过声明引入。vue建立了`<script setup>`来简化。
+组合式api基本都需要从vue解构引入。
 
 ### 响应式数据
 
 **ref()**
-ref()函数用来给定的值创建一个响应式的数据对象
+ref()函数用来创建一个响应式的RefImpl对象：
 ```
 const count = ref(1)
 
 count.value  //1
 ```
-一个普通类型的值，经过ref返回响应式之后，变为有value属性的对象，是因为js无法检测普通变量的访问或修改，所以ref返回一个对象。
+一个普通类型的值，经过ref返回响应式之后，变为有value属性的响应式对象，改变这个对象的value值是响应式的（改变对象的指向不是响应式）。
 ```
 {
-    value:1,
-    get(){
+    _value:1,
+    get value(){
         //
     }
-    set(){
+    set value(){
         //
     }
 }
 ```
-在templete中使用ref时，vue自动帮做了浅层解包，如果ref没有在其他对象内，就不需要加 .value，但是在setup内还是需要。
+在templete中使用ref时，如果ref是顶级属性，或者文本插值内没有js计算，就不加 .value，或者ref是reactive对象的属性值（但是不是在数组和集合内），也不加 .value。这两种情况vue自动做了解包。
+
 Ref 可以接收任何类型的值，值都放置在value属性上，它具有深层响应性。对于非原始值，ref的内部是通过 reactive() 来转换。
 
 **reactive()**
-reactive是用来创建一个响应式代理，储存数据。
+reactive是用来创建一个对象类型的响应式代理：
 ```
 const state = reactive({
     count: 1
@@ -40,9 +42,38 @@ const state = reactive({
 
 state.count  //1
 ```
-事实上，data返回的数据，在内部也是调用的reactive。
 
-注意：解构复制和替换整个对象，会破坏reactive的响应式。使用 `toRefs(reactive({//...}))` 后，才能解构复制。
+注意：解构赋值和替换整个对象，都会破坏reactive的响应式。需要使用 `toRefs(reactive({//...}))` 后，解构复制的值才具有响应式。
+```
+let {count} = toRefs( state )
+```
+
+**toRef()/toRefs()**
+toRef()用于将响应式对象上的一个属性，创建一个对应的 ref，这个 ref 与其源属性保持同步。
+```
+let state = reactive({
+  foo: 1
+})
+
+let fooRef = toRef(state,'foo')
+```
+此时，state.foo和fooRef.value是同步的。
+
+注意：
+```
+let fooRef2 = toRef(state.foo)
+```
+这种写法中，只是使用state.foo的值（1）来创建了ref对象，等于是ref(1)，fooRef2和state.foo是没有关系的。
+
+toRefs()则是对响应式对象返回一个对象，这个对象的每个属性都是响应式对象的属性调用toRef()。
+```
+let state = reactive({
+  foo: 1
+})
+
+let stateRefs = toRefs(state)
+```
+此时，state.foo和stateRefs.foo.value是同步的。
 
 **readonly()**
 返回一个传入值的只读代理，只读代理是深层只读的。只读对象往往作为prop传递给子组件。
