--- a/Vue3/4.Composition（二）.md
+++ b/Vue3/4.Composition（二）.md
@@ -1,14 +1,17 @@
 组合式 API
 ---
 ### 计算属性
+计算属性可以接受一个 getter 函数，返回一个**只读的**响应式 ref 对象。
 ```
 let value = computed(()=>{})
+```
+也可以接受一个带有 get 和 set 函数的对象来创建一个**可读写**的 ref 对象。
+```
 let value = computed({
     get(){},
     set(newValue){}
 })
 ```
-返回一个只读的响应式 ref 对象。
 
 ### 监听
 #### watchEffect()
@@ -24,17 +27,17 @@ let watchEffect = watchEffect(() => {
 // 需要时可以停止监听
 // watchEffect() 
 ```
-watchEffect就能自动的监听num1和num2的变化，但是没有获取到旧的值。
+watchEffect就能自动的监听num1和num2的变化，但是没有获取到旧的值。返回值是一个可以用来停止的函数。
 
 自动监听器默认在组件渲染之前会自动执行一次，添加 flush: 'post' 将会使侦听器延迟到组件渲染之后再执行。
 ```
 watchEffect(()=>{},{flush: 'post'})
 ```
-返回值是一个可以用来停止的函数。
+
 
 **异步内容的消除**
 如果在监视器中执行了异步任务，则监视器下次调用时，上次的异步可能需要进行清除：
-
+```
 let watchEffect = watchEffect((clear) => {
     let timeout = setTimeout(()=>{
         //
@@ -44,10 +47,11 @@ let watchEffect = watchEffect((clear) => {
         clearTimeout(timeout)
     })
 })
+```
 这样在监视器执行时，如果上次的异步任务还没完成，就会被取消后重新建立本次的异步。
 
 #### watch()
-watch接收三个参数：第一个参数是要监听的对象，第二个参数时监听的回调，第三个参数是控制监听时行为的对象（immediate、deep、once）：
+watch接收三个参数：第一个参数是要监听的对象，第二个参数s是监听的回调，第三个参数是控制监听时行为的对象（immediate、deep、once）：
 ```
 let state = reactive({ count: 0 })
 let watch = watch(state,(newValue, oldValue, clear) => {
@@ -58,17 +62,19 @@ let watch = watch(state,(newValue, oldValue, clear) => {
 // 需要时可以停止监听
 watch()
 ```
-监听响应式对象时，默认深层级监听，但是如果回调函数是由于深层级的变更而被触发，那么新值和旧值将是同一个对象。
+监听响应式对象时，默认深层级监听，如果回调函数是由于深层级的变更而被触发，那么新值和旧值将是同一个对象。
 
-如果只想监听某个对象的属性，则第一个参数需要是一个取值函数：
+如果只想监听对象的某个属性，则第一个参数需要是一个取值函数：
 ```
 ()=>{return state.count}
 ```
-如果要监听多个对象，则需要传入被监听对象的数组：
+如果要同时监听多个对象，则需要以数组传入被监听对象：
+```
 watch([num1,num2],([num1NewValue,num2NewValue], [num1oldValue,num2oldValue], clear) => {
     // newValue === oldValue 
   },
 )
+```
 
 **异步内容的消除**
 watch的消除发生在第二个参数回调函数内。
@@ -82,6 +88,7 @@ watch的消除发生在第二个参数回调函数内。
 
 <script setup>
   import { onMounted, ref } from "vue";
+  // 变量名和ref值对应
   let dom = ref(null);
   onMounted(() => {
     console.log(dom.value);
