--- a/Vue3/5.Composition（三）.md
+++ b/Vue3/5.Composition（三）.md
@@ -1,14 +1,14 @@
 组合式 API
 ---
 ### props
-props 可以使用 defineProps() 宏来声明：
+props 可以使用 defineProps() 来声明：
 ```
-const props = defineProps(['foo'])
+let props = defineProps(['foo'])
 console.log(props.foo)
 ```
 
-### $emits
-emits可以使用 defineEmits() 宏来声明：
+### emits
+emits可以使用 defineEmits() 来声明：
 ```
 let emit = defineEmits(['inFocus', 'submit'])
 ```
@@ -26,7 +26,7 @@ function click(){
 ```
 
 ### $attrs
-非 props 或 emits 的 attribute 会默认继承在根元素。
+非 props 和 非 emits 的 attribute 会默认继承在根元素。
 在模版中使用的 $attrs，而组件内，使用 useAttrs() API 来访问继承的attrs：
 ```
 let attrs = useAttrs()
