--- a/Vue3/6.Composition（四）.md
+++ b/Vue3/6.Composition（四）.md
@@ -1,15 +1,45 @@
-v-model
+模版v-model
 ===
-在 Vue 3.4 开始，可以使用 defineModel() ：
+在 Vue 3.4 开始，可以使用 defineModel() 语法糖：
 ```
 let model = defineModel()
 ```
 defineModel() 返回的值是一个 ref，它能实现双向绑定：
 
-1.它的 .value 和父组件的 v-model 的值同步；
-2.当它被子组件变更了，会触发父组件绑定的值一起更新。
+**1.它的 .value 和父组件的 v-model 传递的prop值同步；**
+**2.当它被子组件变更了，会触发父组件绑定的值一起更新。**
 
-它是原来 prop/emit 和 computed（set,get方式）的语法糖，：
+```
+<!-- 原来的写法 -->
+<template>
+  <button @click="clickBtn">{{props.modelValue}}</button>
+</template>
+
+<script setup>
+  let props = defineProps(['modelValue']);
+  let emit = defineEmits(['update:modelValue']);
+  function clickBtn(){
+    emit('update:modelValue','传递的值')
+  }
+</script>
+
+// Vue 3.4的写法
+<template>
+  <button @click="clickBtn">{{model}}</button>
+</template>
+
+<script setup>
+  let model = defineModel()
+  function clickBtn(){
+    model.value = '传递的值'
+  }
+</script>
+```
+defineModel 是一个便利宏。编译器将其展开为以下内容：
+
+一个名为 modelValue 的 prop，defineModel返回值 ref 与其同步；
+一个名为 update:modelValue 的事件，当 ref 的值发生变更时触发。
+
 ```
 <!-- 原来的写法 -->
 <script setup>
@@ -42,8 +72,11 @@ let title = defineModel('title')
 ```
 <my-comp v-model:title.capitalize="value"></my-comp>
 
-let [title, modifiers] = defineModel('title');
-console.log(modifiers) //{ capitalize: true }
+let [title, titleModifiers] = defineModel('title');
+console.log(titleModifiers) //{ capitalize: true }
+
+// 不带参数
+let [model, modifiers] = defineModel();
 ```
 defineModel还可以接收第二个参数：
 ```
@@ -53,4 +86,5 @@ let title = defineModel('title',{
   get(){}
 })
 ```
-当组件有多个v-model时，也应该使用多个defineModel()来一一对应。
+
+当组件有多个v-model时，使用多个defineModel()来一一对应。
