--- a/Vue2/11.组件（一）.md
+++ b/Vue2/11.组件（一）.md
@@ -45,7 +45,7 @@ new Vue({
   }
 })
 ```
-注意：使用局部注册的组件，必须先在实例中注册，否则不可用。
+注意：局部组件，必须先注册到其他组件，才能在该组件内使用。
 
 局部组件的优点在于，使用打包工具时，全局组件不论是否使用，都会被打包，而局部组件只有使用了，才会打包。
 
@@ -59,8 +59,8 @@ new Vue({
   </div>
 </template>
   
-  //组件内
-  template: '#example'
+//组件内
+template: '#example'
 ```
 同样，template标签内，**只能有一个根元素**。
 
@@ -71,8 +71,10 @@ components: {
   'my-component': () => import('./my-async-component')
 }
 ```
+异步组件只有使用时，才从服务器加载，import引入时，并不加载。
+
 ###  组件非prop的 Attribute
-组件的attr属性除了prop（接收父元素数据）以外，其他的默认都会传递到组件的根元素上。这其中，class和style会和根元素的attr叠加，其他的会进行覆盖。
+组件的attr属性除了prop以外，默认都会传递到组件的根元素上。这其中，class和style会和根元素的attr叠加，其他的会进行覆盖。
 要禁止组件的根元素继承 attribute，可以在组件的选项中设置 inheritAttrs: false。
 ```
 Vue.component('my-component', {
@@ -82,7 +84,7 @@ Vue.component('my-component', {
 ```
 **$attrs**
 
-根元素内的其他元素也可以获取组件的attr，给这个元素添加 v-bind="$attrs" 就能获取组件的所有非prop的attr。
+`$attrs`是非prop的attr组成的对象，根元素内的其他元素可以使用`v-bind="$attrs"`获取组件所有非prop的attr:
 ```
 <template id="myComp">
     <div>
@@ -90,12 +92,14 @@ Vue.component('my-component', {
     </div>
 </template>
 
-<my-comp type="text"></my-comp> //<input type="text">
-<my-comp type="password"></my-comp> //<input type="password">
+inheritAttrs: false
+
+<my-comp type="text"></my-comp> //<div><input type="text"></div>
 ```
+
 **$listeners**
 
-`$listeners`存放组件的事件监听器，使用`v-on="$listeners"`能将事件监听器指向组件的某个子元素：
+`$listeners`是组件的所有事件监听器组成的对象，使用`v-on="$listeners"`能将事件监听器指向组件的某个子元素：
 ```
 <my-comp @mousedown="mousedown" @mouseup="mouseup"></my-comp>
 
@@ -108,11 +112,11 @@ Vue.component('my-component', {
 
 ###  组件的v-model
 
-组件的 v-model 使用 :value 和 @input :
+组件的 v-model 默认使用 :value 和 @input :
 ```
 <my-input :value="text" @input="input"></my-input>
 ```
-因此，组件模板内，需要props传递value给input元素，并且input元素的input事件需要$emit一个自定义input事件给组件。
+因此，组件模板内，需要prop接收value，并且@emit一个input自定义事件给组件。
 ```
 Vue.component('my-input', {
   props: ['value'],
@@ -121,7 +125,7 @@ Vue.component('my-input', {
   `
 })
 ```
-value对于text和radio作用是不同的，text可以直接使用，raido则需要将value和自身的value值对比来确定checked。所以对于radio，checkbox等，可以添加model，指定v-model的value值放在一个prop内和触发的事件：
+value对于text和radio作用是不同的，text可以直接使用，raido则需要将value和自身的value值对比来确定checked。所以对于radio，checkbox等，需要添加model，指定v-model传递的值放在哪个prop和监听什么自定义事件：
 ```
 <!-- 模版 -->
 model: {
@@ -133,7 +137,7 @@ props: ['value','parevalue'],
 <!-- 组件 -->
 <my-radio v-for="num in arrNum" :key="num" :value="num" v-model="selected"></my-radio>
 ```
-这样组件v-model的值selected就放在parevalue这个prop内传入。
+这样就指定了组件v-model的值selected放在parevalue这个prop内传入，并且监听change自定义事件，当事件触发传递一个新的值的时候，更新selected的值。
 
 ###  插槽slot
 组件元素之间的位置我称之为插槽位，内容本来是没有作用的：
@@ -142,7 +146,7 @@ props: ['value','parevalue'],
 
 <my-component>无效的数据</my-component>
 ```
-正常来说，渲染结果一样。但是如果my-component组件模版内使用solt元素，则插槽位的内容会替换solt元素。solt就称为插槽。
+正常来说，渲染结果一样。但是如果my-component组件模版内使用slot元素，则插槽位的内容会替换slot元素。slot就称为插槽。
 ```
 template: `
   <div>
@@ -150,7 +154,7 @@ template: `
   </div>
 `
 ```  
-组件在复用时，插槽位的内容不同，实际的渲染结果就不同。使用插槽的组件有了差异性，变得很灵活：
+组件在复用时，插槽位的内容不同，实际的渲染结果就不同。使用插槽的组件变得很灵活：
 ```
 <div id="app">
   <my-panel>111</my-panel>   //111
@@ -249,7 +253,7 @@ data(){
 
 ### .sync 修饰符
 .sync实现 prop 的“双向绑定”。
-组件的值作为prop传递给子组件，子组件发送新值，通知组件变更值时，可以使用.sync 修饰符和 `update:propName` 自定义事件：
+组件的值作为prop传递给子组件，子组件通过`update:propName`自定义事件发送新值，通知组件变更要传递的值：
 ```
 <my-comp :value.sync="组件传递的值"></my-comp>
 
@@ -260,5 +264,5 @@ props:['value']
 ```
 如果有多个 prop 的时候，也可以:
 ```
-<my-comp v-bind.sync="组件属性和值的键值对"></my-comp>
+<my-comp v-bind.sync="属性和值的键值对"></my-comp>
 ```
