--- a/Vue3/2.指令.md
+++ b/Vue3/2.指令.md
@@ -29,8 +29,6 @@ vue3取消了.native，默认所有组件事件都由根节点触发，除非组
 <my-comp :modelValue="value" @update:modelValue="value = $event"></my-comp>
 
 <!-- 模版 -->
-
-
 <template>
   <input
     :value="modelValue"
@@ -68,12 +66,18 @@ emits: ['update:title']
 这表示使用prop title 传值和 update:title 自定义事件，效果就是vue2的mode，将默认的 modelValue 和 update:modelValue 改为自定义的参数。
 
 **自定义修饰符**
-v-model 也可以接受一个自定义修饰符，修饰符会通过prop modelModifiers 传递，这个的值为{修饰符: true}。
+v-model 也可以接受一个自定义修饰符，修饰符会通过prop 名字+'Modifiers' 传递，这个的值为{修饰符: true}。
 ```
 <my-comp v-model.modifier1.modifier2="value"></my-comp>
 
 props:['modelValue','modelModifiers'], // modelModifiers:{modifier1: true, modifier2: true}
 emits:['update:modelValue'],
+
+// 有参数
+<my-comp v-model:title.modifier1.modifier2="value"></my-comp>
+
+props:['title','titleModifiers'], // titleModifiers:{modifier1: true, modifier2: true}
+emits:['update:title'],
 ```
 在事件触发时，就可以根据modelModifiersd的值来进行不同的操作。
 如果又有参数又有修饰符，生成的 prop 将是 参数 + "Modifiers"。
