--- a/开发环境/4.Git/3.区域和库.md
+++ b/开发环境/4.Git/3.区域和库.md
@@ -20,23 +20,50 @@ Remote：远程仓库
 
 ###  撤销修改
 以上，文件的位置是存在3种情况：工作区，暂存区，当前分支。
-文件的修改位于工作区时，可以手动更改来撤销修改，也可以使用`git checkout -- <file>`命令来撤销：
+文件的修改仅位于工作区，还没有提交到暂存区时，可以手动更改回去。
+也可以使用`git checkout -- <file>`命令来撤销所有修改：
 
     $ git checkout -- test.txt
-注意。`--`一定不要忘记。
-文件的修改已经提交到暂存区（git add），可以使用`git reset HEAD <file>`命令来撤销：
+checkout -- 其实是用版本库里的版本替换工作区的版本。注意：`--`一定不要忘记。
+
+如果文件已经提交到暂存区（git add），可以使用`git reset HEAD <file>`命令来将文件修改从暂存区回退到工作区：
 
     $ git reset HEAD test.txt
-文件已经从暂存区提交到了版本库，可以直接进行版本回退。
+文件已经从暂存区提交到了版本库，就需要进行版本回退。
+
+###  版本跳转
+
+通过版本信息，就可以找到自己想要的版本，使用`git reset`命令进行版本跳转：
+
+    $ git reset --hard HEAD~1
+在Git中，用HEAD表示当前版本，向前n个版本就是`HEAD~n`。
+
+此时，如果想要再回到回退前的最新版，如果Git Bash是一直没有关闭过，就可以上翻找到想要的版本号进行跳转：
+
+    $ git reset --hard c92e27
+    HEAD is now at c92e27c add word hello
+版本号写适当长度即可。
+如果Git Bash关闭过，那就需要`git reflog`命令来查看Git的命令记录：
+
+    $ git reflog
+    c92e27c (HEAD -> master) HEAD@{0}: reset: moving to c92e27
+    aa36acf HEAD@{1}: reset: moving to HEAD~1
+    c92e27c (HEAD -> master) HEAD@{2}: commit: add word hello
+    aa36acf HEAD@{3}: commit: add word github
+    c6b5ae9 HEAD@{4}: commit (initial): add a test.txt
+从这里也可以看到命令对应的版本号。
+
+`git reset`命令的参数常用：
+`--hard`移动本地库的HEAD指针，并清除工作区和暂存区的修改
+`--soft`仅移动本地库的HEAD指针，并保留工作区和暂存区的修改
+`--mixed`移动本地库的HEAD指针，并清除暂存区，保留工作区的修改
 
 ###  删除文件
-直接在文件管理器中把没用的文件删了，这个文件如果是已经上传到版本库的文件，则版本库和工作区就不一致了。
-如果确实要删除，那就用命令`git rm`删掉，并且`git commit`：
+如果要删除文件，那就用命令`git rm`，可以删除工作区文件，并且将这次删除放入暂存区。然后再`git commit`提交这次删除到版本库：
 
     $ git rm test.txt
     
     $ git commit -m "remove test.txt"
-如果是误删除，想要恢复，可以：
+如果是误删除，并且还没有提交到版本库，可以：
 
     $ git checkout -- test.txt
-事实上，`git checkout --`其实是用版本库里的版本替换工作区的版本，无论工作区是修改还是删除，都可以“一键还原”。
